More widely applicable readability fix

--- a/src/dropdown/dropdown.scss
+++ b/src/dropdown/dropdown.scss
@@ -95,9 +95,8 @@
       opacity: 1;
     }
     
-    .color-text-secondary,
-    .color-text-secondary {
-      color: var(--color-state-hover-primary-text) !important;
+    [class*="color-text-"] {
+      color: inherit !important;
     }
   }
 
